thêm label, mũi tên ăn theo tailwind bị lỗi vậy chưa fix đc, ae nào biết fix thì hộ phát nhé

--- a/src/components/Filter/Filter.module.css
+++ b/src/components/Filter/Filter.module.css
@@ -108,3 +108,7 @@ input[type="range"]::-ms-thumb {
   border-radius: 25px;
   cursor: pointer;
 }
+
+.chose_vehicle {
+  margin-bottom: -10px !important;
+}
